--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@inertiajs/react": "^2.2.15",
         "@types/react": "^19.2.2",
         "@types/react-dom": "^19.2.2",
