--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,9 +44,10 @@ services:
       - DB_CONNECTION=mysql
       - DB_HOST=mysql
       - DB_PORT=3306
-      - DB_DATABASE=${DB_DATABASE:-budgora}
-      - DB_USERNAME=${DB_USERNAME:-budgora}
-      - DB_PASSWORD=${DB_PASSWORD:-password}
+      - DB_DATABASE=${DB_DATABASE:-budgora_local}
+      - DB_USERNAME=root
+      - DB_PASSWORD=rootpassword
+      - SEED_DATABASE=${SEED_DATABASE:-false}
 
   # Nginx Web Server
   nginx:
